--- a/src/app/domains/auth/pages/login/login.component.html
+++ b/src/app/domains/auth/pages/login/login.component.html
@@ -1,9 +1,59 @@
-<button type="button" (click)="login()">login</button>
-<hr />
-<button type="button" (click)="logout()">logout</button>
-
-@if (!!(user.name)) {
-    <h1>{{user.name}}</h1>
-}@else {
-    <h1>Aun no funciona</h1>
-}
+<div class="bg-gray-100 flex justify-center items-center h-screen">
+  <!-- Left: Image -->
+  <div class="w-1/2 h-screen hidden lg:block">
+    <img
+      src="images/restaurante.jpg"
+      alt="Restaurant image by pexels"
+      class="object-cover w-full h-full"
+    />
+  </div>
+  <!-- Right: Login Form -->
+  <div class="lg:p-36 md:p-52 sm:p-20 p-8 w-full lg:w-1/2">
+    <h1 class="text-2xl font-semibold mb-4">Login</h1>
+    <form (submit)="login()" [formGroup]="login_form" method="POST">
+      <!-- Username Input -->
+      <div class="mb-4">
+        <label for="email" class="block text-gray-600">Email</label>
+        <input
+          formControlName="email_field"
+          type="text"
+          id="email"
+          name="email"
+          class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
+          [class.border-red-400]="login_form.controls['email_field'].touched && login_form.controls['email_field'].invalid"
+          autocomplete="off"
+        />
+      </div>
+      <!-- Password Input -->
+      <div class="mb-4">
+        <label for="password" class="block text-gray-600">Password</label>
+        <input
+          formControlName="password_field"
+          type="password"
+          id="password"
+          name="password"
+          [class.border-red-400]="login_form.controls['password_field'].touched && login_form.controls['password_field'].invalid"
+          class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
+          autocomplete="off"
+        />
+      </div>
+      <!-- Forgot Password Link -->
+      <div class="mb-6 text-blue-500">
+        <a href="#" class="hover:underline">Forgot Password?</a>
+      </div>
+      <!-- Login Button -->
+      <button
+        [disabled]="login_form.invalid"
+        [class.bg-blue-200]="login_form.invalid"
+        type="submit"
+        class="bg-blue-500 hover:bg-blue-600 text-white font-semibold rounded-md py-2 px-4 w-full"
+      >
+        Login
+      </button>
+    </form>
+    <!-- Sign up  Link -->
+    <div class="mt-6 text-blue-500 text-center">
+      <a href="#" class="hover:underline">Sign up Here</a>
+    </div>
+  </div>
+</div>
